<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_copy_from_previous"
        android:title="@string/menu_copy_from_previous"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_save_and_load"
        android:title="@string/menu_save_and_load"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_reset"
        android:title="@string/menu_reset"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_show_hidden"
        android:title="@string/menu_show_hidden"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_signout"
        android:title="@string/menu_signout"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
