<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView android:id="@+id/text_view_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/text_view_username" />
    
    <EditText android:id="@+id/edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/text_view_username_domain"
        android:hint="@string/hint_username" >
        <requestFocus />
    </EditText>
    
    <TextView android:id="@+id/text_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/text_view_password" />
    
    <EditText android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password" >
    </EditText>
    
    <CheckBox android:id="@+id/check_box_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_remember" />
    
    <CheckBox android:id="@+id/check_box_auto_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_auto_sign_in"
        android:enabled="false" />
    	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button android:id="@+id/button_sign_in"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/button_sign_in" />
    
	    <Button android:id="@+id/button_cancel"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/button_cancel" />
    
    </LinearLayout>
</LinearLayout>
</ScrollView>
