<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:id="@+id/text_view_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_username" />
    
    <EditText android:id="@+id/edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_username" >
        <requestFocus />
    </EditText>
    
    <TextView android:id="@+id/text_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_password" />
    
    <EditText android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password" >
    </EditText>
    
    <CheckBox android:id="@+id/check_box_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_remember" />
    	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button android:id="@+id/button_sign_in"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/button_sign_in"
	        android:onClick="signIn" />
    
	    <Button android:id="@+id/button_cancel"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/button_cancel"
	        android:onClick="cancel" />
    
    </LinearLayout>
</LinearLayout>